--- a/PaperLessBlazorTestProject/wwwroot/index.html
+++ b/PaperLessBlazorTestProject/wwwroot/index.html
@@ -20,6 +20,28 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script>
+        function TableFilter(column) {
+            var searchInput = document.getElementById("searchInput" + column);
+            var filter = searchInput.value.toUpperCase();
+
+            var table = document.getElementById("clientTable");
+            var tr = table.getElementsByTagName("tr");
+
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[column];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
