Fixed Filter Bug
If multiple filters were applied, only the latest would work.

Fixed it so that multiple filters can be active.

--- a/PaperLessBlazorTestProject/wwwroot/index.html
+++ b/PaperLessBlazorTestProject/wwwroot/index.html
@@ -22,24 +22,38 @@
     <script src="_framework/blazor.webassembly.js"></script>
 
     <script>
-        function TableFilter(column) {
-            var searchInput = document.getElementById("searchInput" + column);
-            var filter = searchInput.value.toUpperCase();
-
+        function TableFilter() {
             var table = document.getElementById("clientTable");
             var tr = table.getElementsByTagName("tr");
 
-            for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[column];
-                if (td) {
-                    txtValue = td.textContent || td.innerText;
-                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                        tr[i].style.display = "";
-                    } else {
-                        tr[i].style.display = "none";
+            console.log("hi " + tr.length);
+            for (i = 2; i < tr.length; i++) {
+                tr[i].style.display = "";
+            }
+
+            console.log("hi2");
+
+            for (col = 0; col < 4; col++) {
+                console.log("checking col: " + col);
+                var searchInput = document.getElementById("searchInput" + col);
+                var filter = searchInput.value.toUpperCase();
+
+                if (filter != "") {
+                    for (i = 0; i < tr.length; i++) {
+                        td = tr[i].getElementsByTagName("td")[col];
+                        if (td) {
+                            txtValue = td.textContent || td.innerText;
+                            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                                //tr[i].style.display = "";
+                            } else {
+                                tr[i].style.display = "none";
+                            }
+                        }
                     }
                 }
+                
             }
+            
         }
     </script>
 </body>
